--- a/style.css
+++ b/style.css
@@ -49,3 +49,16 @@ body {
     border-radius: 50%;
     display: inline-block;
 }
+
+#player-interface {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+#player-interface button {
+    width: 60px;
+    height: 30px;
+    font-weight: bold;
+}
